2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* memory.c (memory_frame_allocate): If we discard a page, update
	DESC->ACTIVITY's DISCARDED statistic.

	* pager.c (pager_collect): When we collect an activity, update
	its pressure statistic.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* pager.c: Include "profile.h".
	(pager_collect): Profile.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* pager.h (pager_min_alloc_before_next_collect): New declaration.
	(pager_collect_needed): Only collect if AVAILABLE_PAGES >
	PAGER_LOW_WATER_MARK and PAGER_MIN_ALLOC_BEFORE_NEXT_COLLECT > 0.
	(pager_collect_needed): Don't include the dirty, non-discardable
	pages when consider if a collection is required.
	* pager.c (pager_min_alloc_before_next_collect): New variable.
	(pager_collect): If we don't collect enough pages to exceed the
	high water mark, set PAGER_MIN_ALLOC_BEFORE_NEXT_COLLECT to
	two-thirds the available pages.
	* memory.c (memory_frame_allocate): On success, decrement
	PAGER_MIN_ALLOC_BEFORE_NEXT_COLLECT.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): In the cap_copy implementation, if the
	caller updates the capability's policy, if the object is in
	memory, also update it appropriately.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* activity.h (struct activity): Add field frames_pending_eviction.
	Note that we now include frames that are in the laundry in the
	FRAMES_TOTAL and FRAMES_LOCAL variables.
	* object.c (object_desc_claim): If claiming a non-discardable
	eviction candidate, update ACTIVITY's FRAMES_LOCAL, and it and its
	ancestors' FRAMES_TOTAL and FRAMES_PENDING_EVICTION fields.
	* pager.c (reclaim_from): Update VICTIM->FRAMES_LOCAL,
	FRAMES_TOTAL and FRAMES_PENDING_EVICTION appropriately.
	(process): If ACTIVITY_FRAMES is less than GOAL / 1000, don't
	bother collecting the activity.
	(pager_collect): Loop at most 8 times.  Increase the active factor
	by two.  When calling process, don't include the frames pending